--- a/ur16e_dual_arm_bringup/package.xml
+++ b/ur16e_dual_arm_bringup/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ur16e_dual_arm_moveit_description</name>
+  <name>ur16e_dual_arm_bringup</name>
   <version>0.0.0</version>
-  <description>The ur16e_dual_arm_moveit_description package</description>
+  <description>The ur16e_dual_arm_bringup package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ur16e_dual_arm_moveit_description</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ur16e_dual_arm_moveit_bringup</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
