--- a/create_2025_mp_server/CMakeLists.txt
+++ b/create_2025_mp_server/CMakeLists.txt
@@ -164,10 +164,12 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  scripts/left_move_preaction_server.py scripts/right_move_preaction_server.py scripts/move_preaction_sample_client.py
+  scripts/left_pick_place_server.py scripts/right_pick_place_server.py scripts/pick_place_sample_client.py
+  scripts/right_pick_place_server.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
