llm with vision  completed, need to test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-GroundingDino/weights/
+GroundingDINO/
 open_set_object_detection/scripts/weights/
 open_set_object_detection/scripts/*.pt*
-
+build/*
